--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -3,8 +3,15 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /*--background: #ffffff;*/
+  /*--foreground: #171717;*/
+    --background: #0a0a0a;
+    --background-green: #09870994;
+    --background-orange: #bb5c1a94;
+
+    --foreground: #ededed;
+    --foreground-green: rgba(11 ,233 ,94, 1);
+    --foreground-orange: rgba(255 ,105 ,14, 1);
 }
 
 @media (prefers-color-scheme: dark) {
